[tool.poetry]
name = "reportextractorpy"
version = "0.1.0"
description = ""
authors = ["nicksunderland <nicholas.p.sunderland@gmail.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
PyQt5 = "5.15.9"
gatenlp = "1.0.8"
nltk = "3.8.1"
pyYAML = "6.0"
importlib-resources = "5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
